# irfu-python-workshop

./: .gitignore  .pre-commit-config.yaml  README.md
.ipynb_checkpoints/: README-checkpoint.md
.virtual_documents/tutorials/: generic_data_analysis.ipynb  pyrfu-advanced.ipynb  quickstart.ipynb
data/: mms1_fgm_brst_l2_20201119233633_v5.270.0.cdf  mms1_fpi_brst_l2_dis-dist_20201119233433_v3.3.0.cdf  mms1_fpi_brst_l2_dis-moms_20201119233633_v3.3.0.cdf
odin/: README.rst
tutorials/notebooks/: 1a-quickstart.ipynb  1b-best_practices.ipynb  1c-intro_data_analysis.ipynb  1d-cdf.ipynb  2a-xarray_data_structures.ipynb  2b-pyrfu-example.ipynb  2bbis-pyrfu-advanced.ipynb  2c-geopack.ipynb
tutorials/notebooks/irfu_library/: __init__.py  books.py
tutorials/scripts/: overview_plots.py  overview_plots_advanced.py
tutorials/scripts/mypackage/: LICENSE  README.md  pyproject.toml
tutorials/scripts/mypackage/mypkg/: __init__.py  example.py
